[package]
name = "cdc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { version = "22" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
google-cloud-pubsub = "0.22.0"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.79"
google-cloud-googleapis = "0.12.0"
futures = "0.3.30"
tempfile = "3.9.0"
regex = "1.10.3"
sqlite = "0.33.0"
clap = { version = "4.4.18", features = ["derive", "env"] }
rhai = "1.17.1"
