[package]
name = "cdc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-pubsub = "0.22.0"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "tracing"] }
anyhow = "1.0.79"
google-cloud-googleapis = "0.12.0"
futures = "0.3.30"
regex = "1.10.3"
tokio-rusqlite = "0.5.1"
fallible-iterator = "0.3"
clap = { version = "4.4.18", features = ["derive", "env"] }
rhai = { version = "1.17.1", features = ["default", "sync"] }
mysql_async = "0.33.0"
futures-core = "0.3.30"
async-stream = "0.3.5"
tokio-stream = "0.1.14"
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
console-subscriber = "0.2.0"
mysql_common = { version = "0.32.2", features = ["chrono"] }
